Release 1.6 (**tip**)
=======================

* added runtime beaker.__version__
* Add ``webtest_varname`` option to configuration to optionally include
  the session value in the environ vars when using Beaker with WebTest.
* Defer running of pkg_resources to look for external cache modules
  until requested. #66
* memcached backend uses pylibmc.ThreadMappedPool to ensure thread-local
  usage of pylibmc when that library is in use. (#60)
* memcached backend also has ``memcache_module`` string argument, allows
  direct specification of the name of which memcache backend to use.
* Basic container/file-based Session support working in Py3K. (#72)
* Further Python 3 fixes
* Added an optimization to the FileNamespaceContainer when used with 
  Session, such that the pickled contents of the file are not 
  read a second time when session.save() is called.  (#64)
* Fixed bug whereby CacheManager.invalidate wouldn't work for a function
  decorated by cache.cache(). (#61)
* cache decorators @cache.cache(), @cache_region() won't include first
  argument named 'self' or 'cls' as part of the cache key.  This allows
  reasonably safe usage for methods as well as functions.  (#55)
* file backend no longer squashes unpickling errors.   This was inconsistent
  behavior versus all the other backends.
* invalidate_corrupt flag on Session now emits a warning. (#52)
* cache.remove_value() removes the value even if it's already marked
  'expired' (#42)

Release 1.5.4 (6/16/2010)
=========================

* Fix import error with InvalidCryptoBackendError.
* Fix for domain querying on property.
* Test cleanups
* Fix bug with warnings preventing proper running under Jython.

Release 1.5.3 (3/2/2010)
========================

* Fix Python 2.4 incompatibility with google import.

Release 1.5.2 (3/1/2010)
========================

* pkg_resources scanning for additional Beaker back-ends gracefully handles
  situations where its not present (GAE). Fixes #36.